# torch-obb

./: .gitignore  LICENSE  README.md  playground.ipynb  pyproject.toml  setup.cfg  warp_playground.ipynb
test/: test_obb_estimation.py  test_obb_intersection.py
torch_obb/: __init__.py  _estimation_old.py  estimation.py  estimation_old.py  intersection.py  intersection_fallback.py  obb.py  typing.py  util.py
torch_obb/kernels/: estimation_dito.py  estimation_pca.py  estimation_utils.py  intersection.py  util.py  warp_math.py
